--- a/fnjoomlaopencart-service.yaml
+++ b/fnjoomlaopencart-service.yaml
@@ -1,12 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    kompose.cmd: kompose convert -f joomla-opencart-mysql.yaml
-    kompose.version: 1.22.0 (955b78124)
-  creationTimestamp: null
   labels:
-    io.kompose.service: fnjoomlaopencart
+    app: fnjoomlaopencart
   name: fnjoomlaopencart
 spec:
   type: LoadBalancer
@@ -20,4 +16,4 @@ spec:
       targetPort: 80
       nodePort: 30003
   selector:
-    io.kompose.service: fnjoomlaopencart
+    app: fnjoomlaopencart
